# pysqlexpr

./: .gitignore  README.md  check.bat  check.sh  requirements.txt  setup.cfg
pysqlexpr/: __init__.py  boolean.py  identifier.py  indentation.py  query.py  table.py
tests/: test_boolean.py  test_query.py  test_table.py
