[metadata]
name = pysqlexpr
version = attr: pysqlexpr.__version__
description = Expressive SQL for Python
author = Levente Hunyadi
author_email = hunyadi@gmail.com
url = https://github.com/hunyadi/pysqlexpr
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database :: Database Engines/Servers
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    typing_extensions >= 4.12; python_version<"3.12"

[options.packages.find]
exclude =
    tests*

[options.package_data]
pysqlsync =
    py.typed

[flake8]
extend_ignore = DAR101,DAR201,DAR301,DAR401
max_line_length = 140
